# cookiecutter-pypackage

./: cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
